# FRM_Lab_2_Sensores_y_ROS

./: README.md
Recursos/ROS/laboratorio_2/: CMakeLists.txt  package.xml  setup.py
Recursos/ROS/laboratorio_2/launch/: p.launch
Recursos/ROS/laboratorio_2/scripts/: pycontroller.py  pycuadrado.py  pypubvel.py  pysubpose.py
Recursos/ROS/laboratorio_2/src/: hello.cpp  pubvel.cpp  subpose.cpp
Recursos/ROS/laboratorio_2/src/laboratorio_2/: background_changer.py  turtle_manager.py
Recursos/Sensores/Hokuyo/: RunLidar1.m  RunLidar2.m  SetupLidar.m
Recursos/Sensores/RPLidar/: DisconnectLidar.m  LidarScan.m  RunLidar2.m  ScanExportLIDAR.py  SetupLidar.m  scanRPLIDAR.py
Recursos/Sensores/Ultra_Sonido/: ultrasound3.m  usound3.ino
