<?xml version="1.0"?>
<package format="2">
  <name>laboratorio_2</name>
  <version>0.0.1</version>
  <description>The laboratorio_2 package</description>

  <maintainer email="jdaleman@unal.edu.co">Sebastian Daleman</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/labsir-un/FRM_Lab_2_Sensores_y_ROS</url>
  <author email="jdaleman@unal.edu.co">Sebastian Daleman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
